# Slop-Security

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SLOP_SECURITY_SPEC.md  prompt.md  slop.example.json  slop.schema.json
.github/workflows/: ci.yml  release.yml
examples/: vulnerable-example.js
sdks/go/: README.md  go.mod
sdks/go/slop/: slop.go
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: express.ts  fastify.ts  index.ts  next.ts
sdks/node/tests/: security.test.ts
sdks/php/: composer.json
sdks/php/src/: Security.php
sdks/php/src/Laravel/: SlopMiddleware.php
sdks/python/: README.md  pyproject.toml
sdks/python/slop/: __init__.py  core.py  django.py  fastapi.py  flask.py
sdks/python/tests/: test_security.py
sdks/ruby/: slop-security.gemspec
sdks/ruby/lib/: slop.rb
sdks/ruby/lib/slop/: core.rb  rack_middleware.rb  rails_middleware.rb  version.rb
slop-core/: Cargo.toml  build-wasm.ps1  build-wasm.sh
slop-core/src/: config.rs  crypto.rs  error.rs  lib.rs  policy.rs  sanitizer.rs  validator.rs
vibe-check/: README.md  package-lock.json  package.json  tsconfig.json
vibe-check/patterns/: comprehensive.json  extended.json
vibe-check/src/: ai-detection.ts  cli.ts  index.ts
vibe-check/tests/: scanner.test.ts
