[package]
name = "slop-core"
version = "1.0.0"
edition = "2021"
description = "Core security engine for Slop Security - OWASP Top 10 protection for AI-generated code"
license = "MIT"
repository = "https://github.com/slop-security/slop-security"
keywords = ["security", "owasp", "wasm", "sanitization", "xss"]
categories = ["wasm", "web-programming", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
regex = "1.10"
thiserror = "1.0"
url = "2.5"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ipnetwork = "0.20"
html-escape = "0.2"
uuid = { version = "1.6", features = ["v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
lazy_static = "1.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
